# cmake_buildtime_script

./: CMakeLists.txt  README.md  gen_signature.cmake.in  signature.c.in  signature.h  signature_user.c
